syntax = "proto3";

option go_package = ".";

package common;

import "google/protobuf/any.proto";

/**
{
  "code": 0,
  "msg": "success",
  "data": {}
}
 */
message CommonOneResp {
  uint32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}

/**
{
  "code": 0,
  "msg": "success",
  "data": []
}
 */
message CommonManyResp {
  uint32 code = 1;
  string msg = 2;
  repeated google.protobuf.Any data = 3;
}